# bonndit

./: .bash_history  .editorconfig  .gitignore  .python_history  .readthedocs.yaml  .readthedocs.yml  .streamjeuvnhmvgf  .streamjeuvnhmvgflen  .streamjlywjqtqlylen  .streamqrjdeqjfww  .streamqrjdeqjfwwlen  .streamrrwechrucxlen  .test.mif.swp  .travis.yml  AUTHORS.rst  Bingham_filter.ipynb  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  _configtest  aa.txt  avg1.nhdr  avg2.nhdr  avg3.nhdr  bld.bat  build.sh  cmake_install.cmake  conda_build_config.yaml  index.html  install_manifest.txt  (+33 more)
.github/: ISSUE_TEMPLATE.md
.virtual_documents/: Bingham_filter.ipynb
bonndit/: meta.yaml
docs/: .readthedocs.yml  Makefile  bonndit.deconv.rst  bonndit.michi.rst  bonndit.rst  bonndit.utils.rst  conf.py  gettingstarted.rst  index.rst  installation.rst  make.bat  modules.rst  readme.rst  references.rst  scripts.rst  usage.rst
notebooks/: Compare_reorientation.ipynb  Comparison.ipynb  Create_responses.ipynb  Create_test_data.ipynb  Tests.ipynb  Untitled.ipynb  compare_responses.ipynb  shore_example.ipynb  shore_response_test.ipynb
scripts/: .rememberLastPath.ini  bonndit2mrtrix  bundle-filter  bundle-filter.py  bundle-filtering  correct_dropouts.py  csd-peaks  csd-peaks.py  csdeconv  data2fodf  dti_fsl2vvi  dtiselectvols  fast-track  get_fodfs.py  kurtosis  kurtosis_models.py  low-rank-k-approx  low-rank-k-approx.py  mtdeconv  mtdeconv.py  peak-modelling  (+11 more)
(+289 files in other folders)
